--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
 
 body {
   overflow-x: hidden;
-  max-width: 1200px;
+  max-width: 100%;
+  font-family: 'Roboto', sans-serif;
 }
 
 img {
@@ -14,7 +15,7 @@ img {
 }
 
 .header {
-  background-color: lightcoral;
+  background-color: #F8F7F1;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -22,11 +23,10 @@ img {
   height: 50px;
   width: 100%;
   position: relative;
-  max-width: 1200px;
+  max-width: 100%;
 }
 
 nav {
-  background-color: rgb(235, 171, 93);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -39,7 +39,6 @@ nav {
     flex-direction: column;
     list-style: none;
     width: 250px;
-    background-color: lightsteelblue;
     top: 50px;
     left: -250px;
     transition: left 500ms ease;
@@ -48,17 +47,28 @@ nav {
     .header_list.active {
       left: 0;
       transition: left 500ms ease;
+      background: rgba(255, 255, 255, .3);
+      -webkit-backdrop-filter: blur(5px);
+      backdrop-filter: blur(5px);
+      border: 1.5px solid rgba(209, 213, 219, 0.3);
     }
 
   .header_list_item {
+    /* background-color: #F8F7F1; */
     min-width: max-content;
     cursor: pointer;
     height: 36px;
-    border: 1px solid;
-    border-radius: 5px;
+    border-bottom: 1px solid;
     text-align: center;
     line-height: 30px;
     padding: 0 8px;
+    transition: all 0.3s ease;
+    transform: scale(0.85);
+  }
+
+  .header_list_item:hover {
+    top: 0;
+    transform: scale(1)
   }
 
   .header_menu, .car_button {
@@ -82,13 +92,16 @@ nav {
   }
 
   .menu_car {
-    background-color: lightgray;
     position: absolute;
     top: 50px;
     right: -100%;
     width: 100%;
     height: calc(100vh - 50px);
     padding: 24px;
+    background: rgba(255, 255, 255, .3);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    border: 1.5px solid rgba(209, 213, 219, 0.3);
   }
 
     .menu_car.active {
@@ -103,7 +116,7 @@ main {
 }
 
   .section {
-    background-color: rgb(106, 160, 95);
+    background-color: #F8F7F1;
     width: 100%;
     min-width: 400px;
     display: flex;
@@ -120,18 +133,51 @@ main {
 
   .product {
     width: 170px;
-    background-color: antiquewhite;
     border-radius: 10px;
     padding: 10px;
     gap: 8px ;
+    /* old browsers */
+    background: -moz-linear-gradient(-45deg, #F8F7F1 12%, #a1b1ca 83%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #F8F7F1 12%, #a1b1ca 83%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, #F8F7F1 12%, #a1b1ca 83%);
+    -webkit-box-shadow: -9px 10px 5px 0px rgba(189,182,189,1);
+    -moz-box-shadow: -9px 10px 5px 0px rgba(189,182,189,1);
+    box-shadow: -9px 10px 5px 0px rgba(189,182,189,1);
+
   }
 
   .product_img img {
     max-width: 100%;
   }
 
+  .product_description h4, 
+  .product_description p,
+  .car_product_description h4,
+  .car_product_description p {
+    font-size: 9pt;
+    font-weight: lighter;
+  }
+
+  .product_description h3, .car_product_description h3 {
+    font-size: 9pt;
+    font-weight:900;
+  }
+
+  . {
+    font-size: 9pt;
+    font-weight: lighter;
+  }
+
+  .btn_buy {
+    padding:  4px;
+    border-radius: 15px;
+    background-color: transparent;
+  }
+
   .car_products {
-    background-color: lightslategray;
+    /* background-color: #F8F7F1; */
     height: 80%;
     overflow-y: scroll;
     display: flex;
@@ -140,7 +186,7 @@ main {
   }
 
   .car_total {
-    background-color: lightpink;
+    background-color: #F8F7F1;
     height: 20%;
     display: flex;
     flex-direction: column;
@@ -148,6 +194,8 @@ main {
     justify-content: center;
     width: 80%;
     margin: 0 auto;
+    border: 1px solid #F8F7F1;
+    border-radius: 15px;
   }
 
   .btn_pay{
@@ -171,9 +219,14 @@ main {
   .car_product {
     display: flex;
     align-items: center;
-    background-color: antiquewhite;
     border-radius: 10px;
     height: 30%;
+    /* old browsers */
+    background: -moz-linear-gradient(-45deg, #F8F7F1 12%, #a1b1ca 83%);
+    /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #F8F7F1 12%, #a1b1ca 83%);
+    /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, #F8F7F1 12%, #a1b1ca 83%);
   }
 
   .car_counter {
@@ -191,12 +244,13 @@ main {
     cursor: pointer;
   }
 
-  .section.red {
-    background-color: rgb(107, 107, 173);
-  }
-
-  .red {
-    background-color: brown;
+  .modal {
+    background-color: cadetblue;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
   }
 
 @media (min-width: 400px) {
@@ -223,6 +277,10 @@ main {
 
   .menu_car {
     width: 500px;
+    background: rgba(255, 255, 255, .3);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
+    border: 1.5px solid rgba(209, 213, 219, 0.3);
   }
 
 }
